tests/asm-link/bracketed-macro-args/rgbasm.err
error: `nonnumeric` is not a numeric symbol
    ╭─[ test.asm:24:24 ]
    │
 24 │     println "nonnumeric", \<nonnumeric>
    │                           ──────┬──────  
    │                                 ╰──────── this symbol is invalid
    │ 
 31 │     bad 42
    │     ─┬─  
    │      ╰─── macro called here
────╯
error: macro argument #0 doesn't exist
    ╭─[ test.asm:25:18 ]
    │
 25 │     println "zero", \<zero>
    │                     ───┬───  
    │                        ╰───── this reference is invalid
    │ 
 31 │     bad 42
    │     ─┬─  
    │      ╰─── macro called here
    │ 
    │ Help: macro arguments are 1-indexed: the first macro argument is `\1`
────╯
error: the symbol `undefined` doesn't exist
    ╭─[ test.asm:26:23 ]
    │
 26 │     println "undefined", \<undefined>
    │                          ──────┬─────  
    │                                ╰─────── this symbol is invalid
    │ 
 31 │     bad 42
    │     ─┬─  
    │      ╰─── macro called here
────╯
error: macro argument #2 doesn't exist
    ╭─[ test.asm:27:17 ]
    │
 27 │     println "two", \<two>
    │                    ───┬──  
    │                       ╰──── 1 macro arguments are available
    │ 
 31 │     bad 42
    │     ─┬─  
    │      ╰─── macro called here
────╯
error: macro argument #2 doesn't exist
    ╭─[ test.asm:28:15 ]
    │
 28 │     println "2", \<2>
    │                  ──┬─  
    │                    ╰─── 1 macro arguments are available
    │ 
 31 │     bad 42
    │     ─┬─  
    │      ╰─── macro called here
────╯
error: the symbol `abcdefghijklmnopqrstuvwxyzabcdefghijklmnopqrstuvwxyzabcdefghijklmnopqrstuvwxyzabcdefghijklmnopqrstuvwxyzabcdefghijklmnopqrstuvwxyzabcdefghijklmnopqrstuvwxyzabcdefghijklmnopqrstuvwxyzabcdefghijklmnopqrstuvwxyzabcdefghijklmnopqrstuvwxyzabcdefghijklmnopqrstuvwxyz` doesn't exist
    ╭─[ test.asm:34:10 ]
    │
 34 │     println \<abcdefghijklmnopqrstuvwxyzabcdefghijklmnopqrstuvwxyzabcdefghijklmnopqrstuvwxyzabcdefghijklmnopqrstuvwxyzabcdefghijklmnopqrstuvwxyzabcdefghijklmnopqrstuvwxyzabcdefghijklmnopqrstuvwxyzabcdefghijklmnopqrstuvwxyzabcdefghijklmnopqrstuvwxyzabcdefghijklmnopqrstuvwxyz>
    │             ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┬───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────  
    │                                                                                                                                                ╰───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── this symbol is invalid
    │ 
 37 │     toolong 42
    │     ───┬───  
    │        ╰───── macro called here
────╯
6 errors generated.
